--- a/UnderTheHood/app/src/main/res/values/colors.xml
+++ b/UnderTheHood/app/src/main/res/values/colors.xml
@@ -1,6 +1,7 @@
 <?xml version="1.0" encoding="utf-8"?>
-<resources>
-    <color name="colorPrimary">#008577</color>
-    <color name="colorPrimaryDark">#00574B</color>
-    <color name="colorAccent">#D81B60</color>
+<resources xmlns:tools="http://schemas.android.com/tools">
+    <color name="colorPrimary">#98999b</color>
+    <color name="colorPrimaryDark">#404041</color>
+    <color name="colorAccent">#d2d0d1</color>
+    <color name="semi_transparent" tools:ignore="MissingDefaultResource">#66000000</color>
 </resources>
